SERVER-5581 (backport only)

Only attempt to clear a query's pattern if the query is satisfiable for the specified index type.